Download JQuery scripts and fix layout

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %title My Blog
     %link(rel="stylesheet" media="screen" href="/css/blog.css")
-    %script(type="text/javascript" src="/js/jquery.min.js")
+    %script(type="text/javascript" src="/js/jquery-1.7.1.min.js")
     %script(type="text/javascript" src="/js/jquery.timeago.js")
     %script(type="text/javascript" src="/js/blog.js")
 
