Add Post summaries on the index page

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,2 +1,2 @@
 - settings.articles.each do |article|
-  = haml :post, locals: { article: article }
+  = haml :post_summary, locals: { article: article }
